# pokemon-tcg-ai-battle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GITHUB_SETUP.md  LICENSE  README.md  WRITEUP.md  deck.csv  deck_cand_alakazam_pro.csv  deck_cand_anti_meta.csv  deck_cand_dark_yveltal.csv  deck_cand_fight_koraidon.csv  deck_cand_hops_hybrid.csv  deck_cand_hops_hybrid_v2.csv  deck_cand_hops_hybrid_v3a_surge.csv  deck_cand_hops_hybrid_v3b_disrupt.csv  deck_cand_hops_hybrid_v3c_combo.csv  deck_cand_lucario_riolu.csv  deck_cand_psy_latias.csv  deck_cand_sylveon.csv  deck_cand_teaparty.csv  deck_crustle.csv  deck_crustle_pad.csv  deck_crustle_v2.csv  deck_meta_alakazam.csv  deck_meta_fire_ex.csv  deck_meta_hops.csv  deck_meta_mixed.csv  deck_meta_nonex.csv  deck_meta_rocket_spidops.csv  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
agent/: agent.py  arch_prior.py  archetypes.json  base.py  card_images.py  cards.py  config.py  determinize.py  eval_params.py  evaluate.py  features.py  mcts.py  observation.py  policy.py  policy_features.py  policy_net.py  value_net.py  weights.npz
collector/: dataset-metadata.json
docs/: DECISIONS.md  DEPLOY.md  HANDOFF.md  HANDOFF_MACBOOK.md  HUB.md  MAC_AUTOMATION.md  ONBOARDING.md  RUNBOOK.md  SESSION_SUMMARY.md  SUBMIT_BASELINE.md  UAT.md
routines/: auto-checkpoint.sh
scripts/: add_collaborators.sh
selfplay/: baselines.py  gen_data.py  harness.py  merge_data.py  round_robin.py  stress_test.py  train_policy_np.py  train_value.py  train_value_np.py
tests/: search_test.py  (+3 more)
(+65 files in other folders)
